feat: JA localization

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -413,5 +413,7 @@
   "continueTask": "Continue",
   "@continueTask": {},
   "refresh": "Refresh",
-  "@refresh": {}
+  "@refresh": {},
+  "explore": "Explore",
+  "@explore": {}
 }
