feat: Add new translation

--- a/lib/l10n/intl_zh_Hant.arb
+++ b/lib/l10n/intl_zh_Hant.arb
@@ -86,7 +86,7 @@
   "@balance": {},
   "batterySaving": "省電",
   "@batterySaving": {},
-  "switchTo": "切換到",
+  "switchTo": "切換",
   "@switchTo": {},
   "remove": "移除",
   "@remove": {},
