--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -2,211 +2,211 @@
   "@@locale": "ja",
   "rune": "Rune",
   "@rune": {},
-  "runePlayer": "Rune プレイヤー",
+  "runePlayer": "Rune 再生機",
   "@runePlayer": {},
   "copyright": "著作権",
   "@copyright": {},
   "copyrightAnnouncement": "Copyright © 2024 Rune Player 開発者。",
   "@copyrightAnnouncement": {},
-  "LicenseAnnouncement": "この製品はMPLライセンスの下でライセンスされています。",
+  "LicenseAnnouncement": "この製品は MPL 許諾の下で許可されています。",
   "@LicenseAnnouncement": {},
-  "factoryReset": "工場出荷時設定にリセット",
+  "factoryReset": "初期化",
   "@factoryReset": {},
-  "factoryResetSubtitle": "ライブラリリストからすべての項目を削除します",
+  "factoryResetSubtitle": "音楽集からすべての項目を削除する",
   "@factoryResetSubtitle": {},
-  "bsodBody": "プレイヤーに問題が発生し、再起動が必要です。プライバシーを尊重し、データを収集しません。",
+  "bsodBody": "本再生機に問題が発生したため、再起動が必要です。お客様の個人情報を尊重し、情報は一切収集いたしません。",
   "@bsodBody": {},
-  "artists": "アーティスト",
+  "artists": "芸人",
   "@artists": {},
-  "albums": "アルバム",
+  "albums": "歌集",
   "@albums": {},
-  "playlists": "プレイリスト",
+  "playlists": "再生一覧表",
   "@playlists": {},
-  "unknownAlbum": "不明なアルバム",
+  "unknownAlbum": "歌集不明",
   "@unknownAlbum": {},
-  "unknownTrack": "不明なトラック",
+  "unknownTrack": "曲名不明",
   "@unknownTrack": {},
-  "unknownArtist": "不明なアーティスト",
+  "unknownArtist": "芸人不明",
   "@unknownArtist": {},
-  "selectDirectory": "ディレクトリを選択",
+  "selectDirectory": "格納場所を選択",
   "@selectDirectory": {},
-  "noDataAvailable": "利用可能なデータがありません",
+  "noDataAvailable": "利用可能な資料がありません",
   "@noDataAvailable": {},
-  "start": "開始",
+  "start": "始める",
   "@start": {},
   "search": "検索",
   "@search": {},
-  "tracks": "トラック",
+  "tracks": "曲,
   "@tracks": {},
-  "system": "システム",
+  "system": "系統",
   "@system": {},
-  "operatingSystem": "オペレーティングシステム",
+  "operatingSystem": "作業系統",
   "@operatingSystem": {},
-  "systemVersion": "システムバージョン",
+  "systemVersion": "版本情報",
   "@systemVersion": {},
-  "kernelVersion": "カーネルバージョン",
+  "kernelVersion": "核心情報",
   "@kernelVersion": {},
-  "hostName": "ホスト名",
+  "hostName": "主機名",
   "@hostName": {},
-  "player": "プレイヤー",
+  "player": "再生機",
   "@player": {},
-  "buildHash": "ビルドハッシュ",
+  "buildHash": "構築識別子",
   "@buildHash": {},
-  "buildDate": "ビルド日",
+  "buildDate": "構築日",
   "@buildDate": {},
-  "commitDate": "コミット日",
+  "commitDate": "提交日",
   "@commitDate": {},
-  "rustcVersion": "Rustc バージョン",
+  "rustcVersion": "Rustc 版本",
   "@rustcVersion": {},
-  "activation": "アクティベーション",
+  "activation": "認証",
   "@activation": {},
-  "runeIsActivated": "Rune はアクティベートされています",
+  "runeIsActivated": "Rune は認証されています",
   "@runeIsActivated": {},
-  "productId": "製品ID",
+  "productId": "製品身元確認",
   "@productId": {},
-  "youMayBeAVictimOfGenuineSoftware": "正規ソフトウェアの被害者である可能性があります。",
+  "youMayBeAVictimOfGenuineSoftware": "正規ソフトの被害者である可能性があります。",
   "@youMayBeAVictimOfGenuineSoftware": {},
-  "axiomDesign": "アクシオムデザイン",
+  "axiomDesign": "公理設計",
   "@axiomDesign": {},
-  "computingDevice": "コンピューティングデバイス",
+  "computingDevice": "計算装置",
   "@computingDevice": {},
-  "computingDeviceSubtitle": "高速または効率的な処理のためにGPUまたはCPUを選択します。",
+  "computingDeviceSubtitle": "高速または効率的な処理のために画像処理装置または中央処理装置を選択します。",
   "@computingDeviceSubtitle": {},
-  "gpu": "GPU",
+  "gpu": "画像処理装置",
   "@gpu": {},
-  "cpu": "CPU",
+  "cpu": "中央処理装置",
   "@cpu": {},
-  "performanceLevel": "パフォーマンスレベル",
+  "performanceLevel": "性能水準",
   "@performanceLevel": {},
-  "performanceLevelSubtitle": "同時に実行するタスクの数を選択します。",
+  "performanceLevelSubtitle": "同時に実行する作業の数を選択してください。",
   "@performanceLevelSubtitle": {},
-  "performance": "パフォーマンス",
+  "performance": "性能優先",
   "@performance": {},
-  "balance": "バランス",
+  "balance": "均衡重視",
   "@balance": {},
-  "batterySaving": "バッテリー節約",
+  "batterySaving": "電力節約",
   "@batterySaving": {},
   "switchTo": "切り替え",
   "@switchTo": {},
   "remove": "削除",
   "@remove": {},
-  "addLibrary": "ライブラリを追加",
+  "addLibrary": "資料集を追加",
   "@addLibrary": {},
-  "addLibrarySubtitle": "新しいライブラリを追加し、既存のファイルをスキャンします",
+  "addLibrarySubtitle": "新しい資料集を追加し、既存の資料を検出する。",
   "@addLibrarySubtitle": {},
-  "actionMenu": "アクションメニュー",
+  "actionMenu": "追加操作",
   "@actionMenu": {},
-  "addToQueue": "キューに追加",
+  "addToQueue": "再生予定に追加",
   "@addToQueue": {},
-  "addToQueueSubtitle": "再生キューに新しい項目を追加する方法。",
+  "addToQueueSubtitle": "新しい曲をどのように再生予定に追加するか。",
   "@addToQueueSubtitle": {},
   "playNext": "次に再生",
   "@playNext": {},
   "addToEnd": "最後に追加",
   "@addToEnd": {},
-  "middleClickAction": "ミドルクリックアクション",
+  "middleClickAction": "中クリック操作",
   "@middleClickAction": {},
-  "middleClickActionSubtitle": "トラックやコレクションをミドルクリックしたときのアクション。",
+  "middleClickActionSubtitle": "曲や選集まりを中クリックした際の実行動作。",
   "@middleClickActionSubtitle": {},
   "startPlaying": "再生開始",
   "@startPlaying": {},
-  "startRoaming": "ローミング開始",
+  "startRoaming": "漫行開始",
   "@startRoaming": {},
-  "playbackMode": "再生モード",
+  "playbackMode": "再生方法",
   "@playbackMode": {},
-  "playbackModeSubtitle": "音楽の再生方法に関する好みの再生モード。",
+  "playbackModeSubtitle": "音楽の再生方法について、希望する再生形式を選択してください。",
   "@playbackModeSubtitle": {},
-  "colorMode": "カラーモード",
+  "colorMode": "配色模式",
   "@colorMode": {},
-  "colorModeSubtitle": "Rune に表示されるカラーモードを変更します。",
+  "colorModeSubtitle": " Rune に表示される配色を変更します。",
   "@colorModeSubtitle": {},
-  "systemColorMode": "システム",
+  "systemColorMode": 作業系統と同期",
   "@systemColorMode": {},
-  "dark": "ダーク",
+  "dark": "暗い",
   "@dark": {},
-  "light": "ライト",
+  "light": "明るい",
   "@light": {},
-  "themeColor": "テーマカラー",
+  "themeColor": "主題色",
   "@themeColor": {},
-  "themeColorSubtitle": "Rune に新しい外観を与える色を選択します。",
+  "themeColorSubtitle": "Rune に新しい雰囲気をもたらす色を選んでください。",
   "@themeColorSubtitle": {},
-  "followSystemTheme": "システムテーマに従う",
+  "followSystemTheme": "作業系統と同期",
   "@followSystemTheme": {},
-  "dynamicColors": "ダイナミックカラー",
+  "dynamicColors": " 変化する色",
   "@dynamicColors": {},
-  "dynamicColorsSubtitle": "再生中のトラックのカバーアートに基づいて Rune のテーマカラーを調整します。",
+  "dynamicColorsSubtitle": "再生中の曲の表紙画像に合わせて Rune の色合いを調整します",
   "@dynamicColorsSubtitle": {},
-  "brandingAnimation": "ブランディングアニメーション",
+  "brandingAnimation": "起動演出",
   "@brandingAnimation": {},
-  "brandingAnimationSubtitle": "Rune 起動時にブランディングアニメーションを再生します。",
+  "brandingAnimationSubtitle": "Rune 起動時に商標の動きを再生します。",
   "@brandingAnimationSubtitle": {},
   "thisMightTakeAFewMinutes": "数分かかる場合があります。",
   "@thisMightTakeAFewMinutes": {},
-  "tracksFound": " トラックが見つかりました",
+  "tracksFound": " 曲が見つかりました",
   "@tracksFound": {},
-  "albumCoversCollected": " アルバムカバーが収集されました",
+  "albumCoversCollected": " 歌集表紙画像が収集されました",
   "@albumCoversCollected": {},
-  "editPlaylist": "プレイリストを編集",
+  "editPlaylist": "再生一覧表を編集",
   "@editPlaylist": {},
-  "editMix": "ミックスを編集",
+  "editMix": "調和構成を編集",
   "@editMix": {},
   "edit": "編集",
   "@edit": {},
-  "removePlaylist": "プレイリストを削除",
+  "removePlaylist": "再生一覧表を削除",
   "@removePlaylist": {},
-  "removeMix": "ミックスを削除",
+  "removeMix": "調和構成を削除",
   "@removeMix": {},
-  "addToMix": "ミックスに追加",
+  "addToMix": "調和構成に追加",
   "@addToMix": {},
-  "newMix": "新しいミックス",
+  "newMix": "新しい調和構成",
   "@newMix": {},
-  "selectAGroup": "グループを選択",
+  "selectAGroup": "組を選択",
   "@selectAGroup": {},
   "likedOnly": "いいねのみ",
   "@likedOnly": {},
-  "allTracks": "すべてのトラック",
+  "allTracks": "すべての曲",
   "@allTracks": {},
-  "defaultMode": "デフォルト",
+  "defaultMode": "既定",
   "@defaultMode": {},
   "sequential": "順次",
   "@sequential": {},
-  "repeatAll": "すべてをリピート",
+  "repeatAll": "全部繰り返し",
   "@repeatAll": {},
-  "repeatOne": "1つをリピート",
+  "repeatOne": "一曲繰り返し",
   "@repeatOne": {},
-  "shuffle": "シャッフル",
+  "shuffle": "曲を混ぜる",
   "@shuffle": {},
-  "title": "タイトル",
+  "title": "名称",
   "@title": {},
-  "group": "グループ",
+  "group": "組",
   "@group": {},
   "save": "保存",
   "@save": {},
   "create": "作成",
   "@create": {},
-  "cancel": "キャンセル",
+  "cancel": "取消",
   "@cancel": {},
   "noRecommendation": "おすすめはありません",
   "@noRecommendation": {},
   "basedOnAll": "すべてに基づく",
   "@basedOnAll": {},
-  "group1": "グループ 1",
+  "group1": "組 1",
   "@group1": {},
-  "group2": "グループ 2",
+  "group2": "組 2",
   "@group2": {},
-  "group3": "グループ 3",
+  "group3": "組 3",
   "@group3": {},
-  "group4": "グループ 4",
+  "group4": "組 4",
   "@group4": {},
-  "group5": "グループ 5",
+  "group5": "組 5",
   "@group5": {},
-  "group6": "グループ 6",
+  "group6": "組 6",
   "@group6": {},
-  "group7": "グループ 7",
+  "group7": "組 7",
   "@group7": {},
-  "group8": "グループ 8",
+  "group8": "組 8",
   "@group8": {},
-  "group9": "グループ 9",
+  "group9": "組 9",
   "@group9": {},
   "ascending": "昇順",
   "@ascending": {},
@@ -214,51 +214,51 @@
   "@descending": {},
   "lastModified": "最終更新",
   "@lastModified": {},
-  "duration": "期間",
+  "duration": "長さ",
   "@duration": {},
   "timesPlayedThrough": "再生回数",
   "@timesPlayedThrough": {},
-  "timesSkipped": "スキップ回数",
+  "timesSkipped": "飛ばす回数",
   "@timesSkipped": {},
-  "pickDirectory": "ディレクトリを選択",
+  "pickDirectory": "格納場所を選択",
   "@pickDirectory": {},
   "confirm": "確認",
   "@confirm": {},
-  "directories": "ディレクトリ",
+  "directories": "格納場所",
   "@directories": {},
-  "allDirectories": "すべてのディレクトリ",
+  "allDirectories": "すべての格納場所",
   "@allDirectories": {},
-  "randomTracks": "ランダムトラック",
+  "randomTracks": "お任せ",
   "@randomTracks": {},
   "amount": "量",
   "@amount": {},
-  "mode": "モード",
+  "mode": "形式",
   "@mode": {},
   "recommendation": "おすすめ",
   "@recommendation": {},
-  "sortBy": "並べ替え基準",
+  "sortBy": "並び替え基準",
   "@sortBy": {},
-  "sortOrder": "並べ替え順",
+  "sortOrder": "並び順",
   "@sortOrder": {},
   "liked": "いいね",
   "@liked": {},
-  "noRoamingCollection": "ローミングを開始できません。コレクション内のトラックがまだ分析されていません。",
+  "noRoamingCollection": "漫行を開始できません。選集内の曲がまだ解析されていません。",
   "@noRoamingCollection": {},
-  "noRomaingTrack": "ローミングを開始できません。このトラックはまだ分析されていません。",
+  "noRomaingTrack": "漫行を開始できません。この曲はまだ解析されていません。",
   "@noRomaingTrack": {},
-  "noAnalysisScanning": "${baseMessage} ライブラリがスキャン中のため、分析を実行できません。",
+  "noAnalysisScanning": "${baseMessage} 資料集を検査中のため、解析は実行できません。",
   "@noAnalysisScanning": {
     "placeholders": {
       "baseMessage": {}
     }
   },
-  "noAnalysisAnalyzing": "${baseMessage} ライブラリが分析中です。プロセスが終了するまでお待ちください。",
+  "noAnalysisAnalyzing": "${baseMessage} 資料集を解析中です。処理が終了するまでお待ちください。",
   "@noAnalysisAnalyzing": {
     "placeholders": {
       "baseMessage": {}
     }
   },
-  "noAnalysisDefault": "${baseMessage} 最良の体験のためにライブラリを分析してください。",
+  "noAnalysisDefault": "${baseMessage} 最良の体験のために資料集を解析してください。",
   "@noAnalysisDefault": {
     "placeholders": {
       "baseMessage": {}
@@ -266,33 +266,33 @@
   },
   "notReady": "準備ができていません",
   "@notReady": {},
-  "createPlaylist": "プレイリストを作成",
+  "createPlaylist": "再生一覧表を作成",
   "@createPlaylist": {},
-  "scanLibrary": "ライブラリをスキャン",
+  "scanLibrary": "資料集を検査",
   "@scanLibrary": {},
-  "analyseTracks": "トラックを分析",
+  "analyseTracks": "曲を解析",
   "@analyseTracks": {},
-  "scan": "スキャン",
+  "scan": "検査",
   "@scan": {},
-  "scanning": "スキャン中",
+  "scanning": "検査中",
   "@scanning": {},
-  "analyse": "分析",
+  "analyse": "解析",
   "@analyse": {},
-  "analysing": "分析中",
+  "analysing": "解析中",
   "@analysing": {},
-  "tryCreatingYourOwnCollection": "独自のコレクションを作成してみてください",
+  "tryCreatingYourOwnCollection": "独自の選集を作成してみてください",
   "@tryCreatingYourOwnCollection": {},
-  "theseActionsMayHelp": "これらのアクションが役立つかもしれません",
+  "theseActionsMayHelp": "以下の行動が問題解決に役立つ可能性があります",
   "@theseActionsMayHelp": {},
-  "tryScanningNewFiles": "新しいファイルをスキャンしてみてください",
+  "tryScanningNewFiles": "新しい資料を検査してみてください",
   "@tryScanningNewFiles": {},
-  "noCollectionFound": "コレクションが見つかりません",
+  "noCollectionFound": "選集が見つかりません",
   "@noCollectionFound": {},
-  "noItemsInPlaylist": "プレイリストに項目がありません",
+  "noItemsInPlaylist": "再生一覧表に項目がありません",
   "@noItemsInPlaylist": {},
   "previous": "前へ",
   "@previous": {},
-  "previousSubtitle": "前のトラックに移動",
+  "previousSubtitle": "前の曲に移動",
   "@previousSubtitle": {},
   "playPause": "再生/一時停止",
   "@playPause": {},
@@ -300,27 +300,27 @@
   "@playPauseSubtitle": {},
   "next": "次へ",
   "@next": {},
-  "nextSubtitle": "次のトラックに移動",
+  "nextSubtitle": "次の曲に移動",
   "@nextSubtitle": {},
   "volume": "音量",
   "@volume": {},
   "volumeSubtitle": "音量を調整",
   "@volumeSubtitle": {},
-  "playlist": "プレイリスト",
+  "playlist": "再生一覧表",
   "@playlist": {},
-  "playlistSubtitle": "再生キューを表示",
+  "playlistSubtitle": "再生一覧表を表示",
   "@playlistSubtitle": {},
   "hidden": "非表示",
   "@hidden": {},
-  "hiddenSubtitle": "以下のコンテンツは他のリストに非表示になります",
+  "hiddenSubtitle": " 以下の内容は「その他」の一覧に非表示となります",
   "@hiddenSubtitle": {},
-  "coverWall": "カバーウォール",
+  "coverWall": "表紙画像の壁",
   "@coverWall": {},
-  "coverWallSubtitle": "ユニークな雰囲気のためにカバーアートを表示",
+  "coverWallSubtitle": "独自の雰囲気を演出するため、表紙画像を表示します",
   "@coverWallSubtitle": {},
   "fullscreen": "全画面",
   "@fullscreen": {},
-  "fullscreenSubtitle": "全画面モードに入るまたは退出する",
+  "fullscreenSubtitle": "全画面にする／解除する",
   "@fullscreenSubtitle": {},
   "pause": "一時停止",
   "@pause": {},
@@ -330,83 +330,83 @@
   "@enable": {},
   "disable": "無効にする",
   "@disable": {},
-  "noTracksFound": "トラックが見つかりません",
+  "noTracksFound": "曲が見つかりません",
   "@noTracksFound": {},
-  "library": "ライブラリ",
+  "library": "資料集",
   "@library": {},
-  "artistQuery": "アーティストクエリ",
+  "artistQuery": "芸人の照会",
   "@artistQuery": {},
-  "playlistQuery": "プレイリストクエリ",
+  "playlistQuery": "再生一覧表の照会",
   "@playlistQuery": {},
-  "mixes": "ミックス",
+  "mixes": "調和構成",
   "@mixes": {},
-  "mixQuery": "ミックスクエリ",
+  "mixQuery": "調和構成の照会",
   "@mixQuery": {},
   "settings": "設定",
   "@settings": {},
-  "analysis": "分析",
+  "analysis": "解析",
   "@analysis": {},
   "playback": "再生",
   "@playback": {},
-  "theme": "テーマ",
+  "theme": "主題",
   "@theme": {},
-  "controller": "コントローラー",
+  "controller": "制御",
   "@controller": {},
   "about": "情報",
   "@about": {},
-  "selectLibraryDirectorySubtitle": "オーディオライブラリのディレクトリを選択し、すべてのトラックをスキャンおよび分析します。",
+  "selectLibraryDirectorySubtitle": "資料集の格納場所を選択し、すべての曲を検査および解析します。",
   "@selectLibraryDirectorySubtitle": {},
-  "resetLibrary": "ライブラリをリセット",
+  "resetLibrary": "資料集を初期化",
   "@resetLibrary": {},
-  "resetLibraryQuestion": "ライブラリをリセット",
+  "resetLibraryQuestion": "資料集を初期化",
   "@resetLibraryQuestion": {},
-  "resetLibrarySubtitle": "ライブラリをリセットすると、ファイルのオープン履歴がクリアされます。既存のメディアライブラリは変更されません。続行しますか？",
+  "resetLibrarySubtitle": "資料集を初期化すると、履歴が消去されます。既存の資料には影響はありません。実行しますか？",
   "@resetLibrarySubtitle": {},
   "unavailable": "利用不可",
   "@unavailable": {},
-  "goToArtist": "アーティストに移動",
+  "goToArtist": "芸人に移動",
   "@goToArtist": {},
-  "goToAlbum": "アルバムに移動",
+  "goToAlbum": "歌集に移動",
   "@goToAlbum": {},
-  "addToPlaylist": "プレイリストに追加",
+  "addToPlaylist": "再生一覧表に追加",
   "@addToPlaylist": {},
-  "newPlaylist": "新しいプレイリスト",
+  "newPlaylist": "新しい再生一覧表",
   "@newPlaylist": {},
-  "unableToOpenLibrary": "ライブラリを開けません",
+  "unableToOpenLibrary": "資料集を開けません",
   "@unableToOpenLibrary": {},
-  "unableToOpenLibrarySubtitle": "次のエラーによりライブラリを開けませんでした:",
+  "unableToOpenLibrarySubtitle": "資料集を開けませんでした。原因は以下の通りです：",
   "@unableToOpenLibrarySubtitle": {},
-  "unknownError": "不明なエラー",
+  "unknownError": "不明な原因",
   "@unknownError": {},
   "close": "閉じる",
   "@close": {},
-  "queue": "キュー",
+  "queue": "再生予定列",
   "@queue": {},
-  "createMix": "ミックスを作成",
+  "createMix": "調和を構成",
   "@createMix": {},
-  "removeMixTitle": "ミックスを削除",
+  "removeMixTitle": "調和構成を削除",
   "@removeMixTitle": {},
-  "removeMixSubtitle": "このミックスを削除すると、復元できません。削除しますか？",
+  "removeMixSubtitle": "この調和構成を削除すると、復元できません。削除しますか？",
   "@removeMixSubtitle": {},
   "delete": "削除",
   "@delete": {},
-  "oneDirectory": "1 ディレクトリ",
+  "oneDirectory": "1 つの格納場所",
   "@oneDirectory": {},
-  "manyDirectories": "${count} ディレクトリ",
+  "manyDirectories": "${count} つの格納場所",
   "@manyDirectories": {
     "placeholders": {
       "count": {}
     }
   },
-  "removePlaylistTitle": "プレイリストを削除",
+  "removePlaylistTitle": "再生一覧表を削除",
   "@removePlaylistTitle": {},
-  "removePlaylistSubtitle": "このプレイリストを削除すると、復元できません。削除しますか？",
+  "removePlaylistSubtitle": "この再生一覧表を削除すると、復元できません。削除しますか？",
   "@removePlaylistSubtitle": {},
-  "cancelTaskTitle": "タスクをキャンセル",
+  "cancelTaskTitle": "作業を中止",
   "@cancelTaskTitle": {},
-  "cancelTaskSubtitle": "このタスクをキャンセルすると、現在の完了状態で停止します。キャンセルしますか？",
+  "cancelTaskSubtitle": "この作業を中止すると、現在の進行状態で停止します。本当に中止しますか",
   "@cancelTaskSubtitle": {},
-  "cancelTask": "タスクをキャンセル",
+  "cancelTask": "作業を中止",
   "@cancelTask": {},
   "continueText": "続行",
   "@continueText": {},
@@ -414,6 +414,6 @@
   "@continueTask": {},
   "refresh": "更新",
   "@refresh": {},
-  "explore": "探索",
+  "explore": "探す",
   "@explore": {}
 }
