fix: i18n file grammer

--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -36,7 +36,7 @@
   "@start": {},
   "search": "検索",
   "@search": {},
-  "tracks": "曲,
+  "tracks": "曲",
   "@tracks": {},
   "system": "系統",
   "@system": {},
@@ -120,7 +120,7 @@
   "@colorMode": {},
   "colorModeSubtitle": " Rune に表示される配色を変更します。",
   "@colorModeSubtitle": {},
-  "systemColorMode": 作業系統と同期",
+  "systemColorMode": "作業系統と同期",
   "@systemColorMode": {},
   "dark": "暗い",
   "@dark": {},
