fix: Language code

--- a/lib/l10n/intl_zh_Nan.arb
+++ b/lib/l10n/intl_zh_Nan.arb
@@ -1,5 +1,5 @@
 {
-  "@@locale": "zh-Min",
+  "@@locale": "zh-Nan",
   "rune": "Rune",
   "@rune": {
     "description": "The brand name of the software, which should not be translated."
