--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -8,8 +8,8 @@
   "@copyright": {},
   "copyrightAnnouncement": "Copyright © 2024 Rune Player 開発者。",
   "@copyrightAnnouncement": {},
-  "LicenseAnnouncement": "この製品は MPL 許諾の下で許可されています。",
-  "@LicenseAnnouncement": {},
+  "licenseAnnouncement": "この製品は MPL 許諾の下で許可されています。",
+  "@licenseAnnouncement": {},
   "factoryReset": "初期化",
   "@factoryReset": {},
   "factoryResetSubtitle": "音楽集からすべての項目を削除する",
