fix: Esperanto not working

--- a/lib/l10n/intl_en_EO.arb
+++ b/lib/l10n/intl_en_EO.arb
@@ -1,5 +1,5 @@
 {
-  "@@locale": "eo",
+  "@@locale": "en_EO",
   "rune": "Rune",
   "@rune": {
     "description": "The brand name of the software, which should not be translated."
