--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -12,7 +12,7 @@
   "@licenseAnnouncement": {},
   "factoryReset": "初期化",
   "@factoryReset": {},
-  "factoryResetSubtitle": "音楽集からすべての項目を削除する",
+  "factoryResetSubtitle": "音楽集からすべての項目を削除する。",
   "@factoryResetSubtitle": {},
   "bsodBody": "本再生機に問題が発生したため、再起動が必要です。お客様の個人情報を尊重し、情報は一切収集いたしません。",
   "@bsodBody": {},
@@ -114,7 +114,7 @@
   "@startRoaming": {},
   "playbackMode": "再生方法",
   "@playbackMode": {},
-  "playbackModeSubtitle": "音楽の再生方法について、希望する再生形式を選択してください。",
+  "playbackModeSubtitle": "音楽の再生方法について、希望する再生形式を選択してください",
   "@playbackModeSubtitle": {},
   "colorMode": "配色模式",
   "@colorMode": {},
