--- a/lib/l10n/intl_zh_Hant_TW.arb
+++ b/lib/l10n/intl_zh_Hant_TW.arb
@@ -12,7 +12,7 @@
   "@licenseAnnouncement": {},
   "factoryReset": "恢復出廠設定",
   "@factoryReset": {},
-  "factoryResetSubtitle": "從資料庫清單中移除所有項目",
+  "factoryResetSubtitle": "從資料庫清單中移除所有項目。",
   "@factoryResetSubtitle": {},
   "bsodBody": "您的播放器遇到問題，需要重新啟動。我們尊重您的隱私，不會收集任何資料。",
   "@bsodBody": {},
@@ -114,7 +114,7 @@
   "@startRoaming": {},
   "playbackMode": "播放模式",
   "@playbackMode": {},
-  "playbackModeSubtitle": "偏好的音樂播放模式。",
+  "playbackModeSubtitle": "偏好的音樂播放模式",
   "@playbackModeSubtitle": {},
   "colorMode": "顏色模式",
   "@colorMode": {},
